--- a/views/usuarios/registro.handlebars
+++ b/views/usuarios/registro.handlebars
@@ -1,3 +1,8 @@
+{{#each erros}}
+    <div class="alert alert-danger">{{texto}}</div>
+{{else}}
+
+{{/each}}
 <h3>Crie sua conta hoje: </h3>
 <div class="card">
     <div class="card-body">
