--- a/views/usuarios/login.handlebars
+++ b/views/usuarios/login.handlebars
@@ -1,4 +1,4 @@
-<form action="" method="post">
+<form action="/usuarios/login" method="post">
     <h3>Login: </h3>
     <div class="card">
         <div class="card-body">
