--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -12,12 +12,15 @@
         <li class="nav-item">
           <a class="nav-link" href="/categorias">Categorias</a>
         </li>
+        {{#if user}}
+        {{else}}
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Login</a>
+          <a class="nav-link " aria-disabled="true" href="/usuarios/login">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Registro</a>
+          <a class="nav-link " aria-disabled="true" href="/usuarios/registro">Registro</a>
         </li>
+        {{/if}}
       </ul>
     </div>
   </div>
