--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -13,13 +13,16 @@
           <a class="nav-link" href="/categorias">Categorias</a>
         </li>
         {{#if user}}
+            <li class="nav-item">
+              <a class="nav-link " aria-disabled="true" href="/usuarios/LOGOUT">Sair</a>
+            </li>
         {{else}}
-        <li class="nav-item">
-          <a class="nav-link " aria-disabled="true" href="/usuarios/login">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " aria-disabled="true" href="/usuarios/registro">Registro</a>
-        </li>
+            <li class="nav-item">
+              <a class="nav-link " aria-disabled="true" href="/usuarios/login">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " aria-disabled="true" href="/usuarios/registro">Registro</a>
+            </li>
         {{/if}}
       </ul>
     </div>
