Add last feature to deploy

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -14,7 +14,7 @@
         </li>
         {{#if user}}
             <li class="nav-item">
-              <a class="nav-link " aria-disabled="true" href="/usuarios/LOGOUT">Sair</a>
+              <a class="nav-link " aria-disabled="true" href="/usuarios/logout">Sair</a>
             </li>
         {{else}}
             <li class="nav-item">
